<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrnd"
    android:orientation="vertical" >
    <RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/RelativeLayout01"
	    android:layout_alignParentTop="true" >
	    <ImageView
	        android:id="@+id/ImageView_SettingsHeader"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:padding="10dp"
	        android:src="@android:drawable/ic_menu_preferences" ></ImageView>
	    <TextView
            android:id="@+id/TextView_SettingsHeader"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/screen_title_size"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@android:color/white"
            android:textColor="@color/title_color"></TextView>
	    <ImageView
            android:id="@+id/ImageView_SettingsHeader2"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_preferences"
            android:layout_gravity="left|center_vertical"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"></ImageView>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/ScrollViewSettings"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" >
            <TextView
                android:text="@string/nick"
                android:textSize="@dimen/help_text_size"
                android:id="@+id/TextView_Nickname"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/title_color" />
            <EditText
                android:id="@+id/EditText_Nickname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLength="20"
                android:maxLines="1"
                android:inputType="textPersonName" />
            <TextView
                android:id="@+id/TextView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="@dimen/help_text_size"
                android:textColor="@color/title_color" />
            <EditText
                android:id="@+id/EditText_Email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/TextView_Password"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="@color/title_color"
                android:textSize="@dimen/help_text_size" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/LinearLayoutPassword" >
                <Button
                    android:id="@+id/Button_Password"
                    android:text="@string/password_set"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="onSetPasswordButtonClick" />
                <TextView
                    android:id="@+id/TextView_Password_Info"
                    android:text="@string/password_empty"
                    android:textSize="@dimen/help_text_size"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/title_color" />
            </LinearLayout>
            <TextView
                android:id="@+id/TextView_DOB"
                android:text="@string/dob"
                android:textStyle="bold"
                android:textColor="@color/title_color"
                android:textSize="@dimen/help_text_size"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <LinearLayout
                android:id="@+id/LinearLayout_DOB"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" >
                <Button
                    android:id="@+id/Button_DOB"
                    android:text="@string/dob_set"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="onPickDateButtonClick" ></Button>
                <TextView
                    android:id="@+id/TextView_DOB_Info"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/dob_empty"
                    android:textColor="@color/title_color"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/help_text_size" ></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/TextView_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/help_text_size"
                android:textColor="@color/title_color"
                android:textStyle="bold" ></TextView>
            <Spinner
                android:id="@+id/Spinner_Gender"
                android:entries="@array/genders"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
            <Button
		        android:id="@+id/Button_Changelog"
		        android:text="@string/changelog_button"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:onClick="onChangeLogButtonClick" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>