<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">
    
    <TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="top|center"
        android:layout_gravity="center_vertical|center_horizontal" />
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >
        <TableRow
            android:id="@+id/TableRow01"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
            	android:id="@+id/ImageView2_Left"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/splash1"/>
            <ImageView
            	android:id="@+id/ImageView2_Right"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/splash2"/>
        </TableRow>
        <TableRow
            android:id="@+id/TableRow02"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
            	android:id="@+id/ImageView3_Left"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/splash3"/>
            <ImageView
            	android:id="@+id/ImageView3_Right"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/splash4" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="center" />
    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textColor="@color/version_color"
        android:textSize="@dimen/version_size"
        android:background="@color/version_background"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:gravity="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/app_version_info" />
</LinearLayout>